added events link on nav

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <ul class="items">
                     <a class="item" href="#overview">Overview</a>
                     <a class="item" href="#home">Home</a>
-                    <a class="item">Events</a>
+                    <a class="item" href="#on-events">Events</a>
                     <a class="item">Reviews</a>
                 </ul>
             </nav>
