--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a class="discbutton" target="_blank" href="https://discord.gg/krqyN8snjr">Join us on Discord</a>
         </div>
         <div class="imgContainer">
-            <img class="imageStyle" src="assets/main.png" alt="main image">
+            <img class="imageStyle" src="assets/other-elements/main.png" alt="main image">
         </div>
     </main>
 
@@ -39,32 +39,32 @@
         <h1 class="section-header">HOME</h1>
         <div class="home-items">
             <article class="home-event">
-                <img src="/assets/buddy-read.png" alt="buddy-read">
+                <img src="/assets/server-features/buddy-read.png" alt="buddy-read">
                 <label>Buddy Read Program</label>
                 <p>The Book Buddies program allows you to form reading groups, set reading goals and complete star tasks together.</p>
             </article>
             <article class="home-event">
-                <img src="/assets/dead-poet-society.png" alt="buddy-read">
+                <img src="/assets/server-features/dead-poet-society.png" alt="buddy-read">
                 <label>Dead Poets Society</label>
                 <p>The dead poet's society is a place where you can find a group or pair to buddy read the same book together</p>
             </article>
             <article class="home-event">
-                <img src="/assets/sessions.png" alt="buddy-read">
+                <img src="/assets/server-features/sessions.png" alt="buddy-read">
                 <label>Reading/Study Sessions</label>
                 <p>Reading/study sessions encourage our members to read and study together. Our librarians regularly host sessions.</p>
             </article>
             <article class="home-event">
-                <img src="/assets/star-system.png" alt="buddy-read">
+                <img src="/assets/server-features/star-system.png" alt="buddy-read">
                 <label>The Star System</label>
                 <p>Earn stars for participating in reading sessions and events. You will also be rewarded stars for submitting reading time</p>
             </article>
             <article class="home-event">
-                <img src="/assets/read-a-thon.png" alt="buddy-read">
+                <img src="/assets/server-features/read-a-thon.png" alt="buddy-read">
                 <label>Read-a-thons</label>
                 <p>Readathons are hosted once a month. Our readathons are usually 24 or 28 hours, and have their own themes, and challenges you can complete for stars.</p>
             </article>
             <article class="home-event">
-                <img src="/assets/writing-prompts.png" alt="buddy-read">
+                <img src="/assets/server-features/writing-prompts.png" alt="buddy-read">
                 <label>Weekly Writing Prompts</label>
                 <p>Weekly writing prompts will be given to writers weekly and the winning entry will receive stars</p>
             </article>
@@ -76,22 +76,22 @@
         <h1 class="section-header">RECENT EVENTS</h1>
         <div class="slides-container">
             <button class="slide-prev">
-                <img class="slide-nav" src="/assets/left.png">
+                <img class="slide-nav" src="/assets/icons/left.png">
             </button>
             <article class="slideshow-container">
-               <img class="slideshow-img1" src="assets/i-am-home-events.png" alt="slide1">
+               <img class="slideshow-img1" src="assets/recent-events/i-am-home-events.png" alt="slide1">
                <p class="slideshow-label">1000 MEMBER EVENT</p> 
             </article>
             <article class="slideshow-container">
-               <img class="slideshow-img2" src="assets/i-am-home-tasks.png" alt="slide2">
+               <img class="slideshow-img2" src="assets/recent-events/i-am-home-tasks.png" alt="slide2">
                <p class="slideshow-label">1000 MEMBER EVENT TASKS</p> 
             </article>
             <article class="slideshow-container">
-                <img class="slideshow-img3" src="assets/winter-wonderland.png" alt="slide2">
+                <img class="slideshow-img3" src="assets/recent-events/winter-wonderland.png" alt="slide2">
                 <p class="slideshow-label">DECEMBER READATHON</p> 
             </article>
             <button class="slide-next">
-                <img class="slide-nav" src="assets/right.png">
+                <img class="slide-nav" src="assets/icons/right.png">
             </button>
         </div>
     </section>
@@ -125,7 +125,7 @@
 
     <!-- Back-to-top button -->
     <a href="#top" class="back-to-top">
-        <img src="/assets/up-arrow.png" class="top-icon">
+        <img src="/assets/icons/up-arrow.png" class="top-icon">
     </a>
 
     <script src="index.js"></script>
