--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <a class="item" href="#overview">Overview</a>
                     <a class="item" href="#home">Home</a>
                     <a class="item" href="#on-events">Events</a>
-                    <a class="item">Reviews</a>
+                    <a class="item" href="#reviews">Reviews</a>
                 </ul>
             </nav>
 
@@ -98,28 +98,43 @@
 
     <!-- ----- Reviews ------ -->
     <section class="reviews" id="reviews">
-        <h1>REVIEWS</h1>
+        <h1 class="section-header">REVIEWS</h1>
         <div class="review-container">
-            <div class="review1">
-                <p>Review 1</p>
+            <div class="review">
+                <img class="stars-given" src="/assets/stars/5-star.png">
+                <h2 class="review-title">amazing server!</h2>
+                <p class="review-content">This server is without a doubt one of my favorite. It’s so welcoming and nice. I have been in this server for months and i couldn’t love it more, people are nice and fun! All conversations are welcomed, bookish or not. I strongly recommend <3</p>
+                <p class="user-review">― maryse</p>
             </div>
-            <div class="review2">
-                <p>Review 2</p>
+            <div class="review">
+                <img class="stars-given" src="/assets/stars/5-star.png">
+                <h2 class="review-title">great server. very friendly.</h2>
+                <p class="review-content">I joined this server just about a month ago but it has already made such a huge impression on me. the staff and members here are all so friendly and i seriously enjoy chatting with each and every one of them. i also feel that they have an amazing reading-time-point system. you can get stars for reading (and other specific activities) and then spend those stars on roles! how cool is that?! thank you home of athena for being a big part in my making of friends. i didnt really have many people i could talk to before but now i just feel so supported and surrounded by great people!</p>
+                <p class="user-review">― kal (jenkei)</p>
             </div>
-            <div class="review3">
-                <p>Review 3</p>
+            <div class="review">
+                <img class="stars-given" src="/assets/stars/5-star.png">
+                <h2 class="review-title">amazing server!</h2>
+                <p class="review-content">This server is so welcoming and has the most amazing people in it. Everyone on the moderator team is super cool and someone is always active, they’re all so kind as well. Everyone is so respectful and every month there’s a buddy read which definitely helps you get motivated to read! If you're looking for a safe welcoming place you should totally join</p>
+                <p class="user-review">― jupiter</p>
             </div>
-            <div class="review4 hidden">
-                <p>Review 4</p>
+            <div class="review hidden">
+                <img class="stars-given" src="/assets/stars/5-star.png">
+                <h2 class="review-title">one of the best book servers on discord!</h2>
+                <p class="review-content">I've been in many book clubs / servers on Discord but The Castle of Athena was most definitely the most welcoming, friendly, and most entertaining one i've ever been in. The staff is so lovely and kind and they make you feel very welcomed. Everything in the server is well-organized so it's not overwhelming, but at the same time offers so much. They have many events such as bqotd's (bookish question of the day), readathons, buddy reads, wpotw's (writing prompt of the week), and so much more. They also have a reward point system by completing challenges such as reading, studying, answering the daily bqotd, and by participating in other events. I found that it motivated me to read/study and interact more with the server! The vibes are immaculate and this server has everything you're looking for. <3</p>
+                <p class="user-review">― chloé</p>
             </div>
-            <div class="review5 hidden">
-                <p>Review 5</p>
+            <div class="review hidden">
+                <img class="stars-given" src="/assets/stars/5-star.png">
+                <h2 class="review-title">The best book-club</h2>
+                <p class="review-content">Love this book-club.
+                    It has got so many events and book-discussions. Really active and super-friendly staff also! The system of the server is so advanced and amazing. I am so grateful to the amount of effort that has been put in this club. Not to mention cute emotes! Highly recommended~
+                    Glad to be a part of this community ✧˚ · .</p>
+                <p class="user-review">― Yasha Elsher</p>
             </div>
-            <div class="review6 hidden">
-                <p>Review 6</p>
-            </div>
-            <button id="showMoreBtn">Show More Reviews</button>
+            
         </div>
+        <button class="show-more-btn" id="showMoreBtn">Show More Reviews</button>
     </section>
 
 
