--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home of Athena Bookclub</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles-mobile.css">
     
 </head>
 <body>
@@ -75,9 +76,6 @@
     <section class="events" id="on-events">
         <h1 class="section-header">RECENT EVENTS</h1>
         <div class="slides-container">
-            <button class="slide-prev">
-                <img class="slide-nav" src="/assets/icons/left.png">
-            </button>
             <article class="slideshow-container">
                <img class="slideshow-img1" src="assets/recent-events/i-am-home-events.png" alt="slide1">
                <p class="slideshow-label">1000 MEMBER EVENT</p> 
@@ -90,10 +88,15 @@
                 <img class="slideshow-img3" src="assets/recent-events/winter-wonderland.png" alt="slide2">
                 <p class="slideshow-label">DECEMBER READATHON</p> 
             </article>
+        </div>
+        <div class="btns-container">
+            <button class="slide-prev">
+                <img class="slide-nav" src="/assets/icons/left.png">
+            </button>
             <button class="slide-next">
                 <img class="slide-nav" src="assets/icons/right.png">
-            </button>
         </div>
+        </button>
     </section>
 
     <!-- ----- Reviews ------ -->
