--- a/index.html
+++ b/index.html
@@ -11,27 +11,27 @@
 <body>
     
     <main class="head">
-        <div class="firstPage" id="overview">
+        <div class="first-page" id="overview">
 
             <!-- -------- Navigation Bar ------- -->
-            <nav class="navbar">
-                <ul class="items">
+            <div class="navbar">
+                <nav class="items">
                     <a class="item" href="#overview">Overview</a>
                     <a class="item" href="#home">Home</a>
                     <a class="item" href="#on-events">Events</a>
                     <a class="item" href="#reviews">Reviews</a>
-                </ul>
-            </nav>
+                </nav>
+            </div>
 
             <!-- ----- Overview ----- -->
-            <div class="aboutText">
-                <p class="o-heading">HOME OF ATHENA</p>
-                <p class="o-desc">Welcome to the Home of Athena, a reading community designed as a cozy and comfortable space to discuss literature. We welcome all reading levels, ages, and backgrounds.</p> 
+            <div class="about-text">
+                <p class="overview-heading">HOME OF ATHENA</p>
+                <p class="overview-description">Welcome to the Home of Athena, a reading community designed as a cozy and comfortable space to discuss literature. We welcome all reading levels, ages, and backgrounds.</p> 
             </div>
-            <a class="discbutton" target="_blank" href="https://discord.gg/krqyN8snjr">Join us on Discord</a>
+            <a class="discord-btn" target="_blank" href="https://discord.gg/krqyN8snjr">Join us on Discord</a>
         </div>
-        <div class="imgContainer">
-            <img class="imageStyle" src="assets/other-elements/main.png" alt="main image">
+        <div class="img-container">
+            <img class="image-style" src="assets/other-elements/main.png" alt="main image">
         </div>
     </main>
 
@@ -77,21 +77,21 @@
         <h1 class="section-header">RECENT EVENTS</h1>
         <div class="slides-container">
             <article class="slideshow-container">
-               <img class="slideshow-img1" src="assets/recent-events/i-am-home-events.png" alt="slide1">
+               <img class="slideshow-img1" src="assets/recent-events/i-am-home-events.png" alt="1000-member-event">
                <p class="slideshow-label">1000 MEMBER EVENT</p> 
             </article>
             <article class="slideshow-container">
-               <img class="slideshow-img2" src="assets/recent-events/i-am-home-tasks.png" alt="slide2">
+               <img class="slideshow-img2" src="assets/recent-events/i-am-home-tasks.png" alt="1000-member-tasks">
                <p class="slideshow-label">1000 MEMBER EVENT TASKS</p> 
             </article>
             <article class="slideshow-container">
-                <img class="slideshow-img3" src="assets/recent-events/winter-wonderland.png" alt="slide2">
+                <img class="slideshow-img3" src="assets/recent-events/winter-wonderland.png" alt="december-read-a-thon">
                 <p class="slideshow-label">DECEMBER READATHON</p> 
             </article>
         </div>
         <div class="btns-container">
             <button class="slide-prev">
-                <img class="slide-nav" src="/assets/icons/left.png">
+                <img class="slide-nav" src="assets/icons/left.png">
             </button>
             <button class="slide-next">
                 <img class="slide-nav" src="assets/icons/right.png">
@@ -143,7 +143,7 @@
 
     <!-- Back-to-top button -->
     <a href="#top" class="back-to-top">
-        <img src="/assets/icons/up-arrow.png" class="top-icon">
+        <img src="assets/icons/up-arrow.png" class="top-icon">
     </a>
 
     <script src="index.js"></script>
